[update] make時にビルドとテスト実行を分離できるように変更
make test : テストのビルドのみ
make : テスト実行

--- a/src/Makefile
+++ b/src/Makefile
@@ -11,11 +11,15 @@ CPPFLAGS += -std=c++11 -DUNIT_TEST -Wall
 GTEST_LIBS =  -L${GTEST_INSTALL_DIR}/lib -lgtest -lgtest_main -lpthread
 OBJECTS = $(SRC:%.c=%.o) $(SRC_CPP:%.cpp=%.o)
 
+.PHONY: all clean test testrun
+
 all : $(TESTS)
 	./$^
 
 clean :
 	$(RM) $(TESTS) *.o
+
+test : $(TESTS)
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $^ -o $@
