[add] makeにtestrunターゲットを追加

--- a/src/Makefile
+++ b/src/Makefile
@@ -6,20 +6,24 @@ GTEST_INSTALL_DIR = /usr
 
 GTEST_DIR = ${GTEST_INSTALL_DIR}/gtest
 USER_DIR = .
-CFLAGS += -std=c11 -DUNIT_TEST -Wall -Dstatic=
-CPPFLAGS += -std=c++11 -DUNIT_TEST -Wall
+CFLAGS += -std=c11 -DUNIT_TEST -Wall -Dstatic= -g -O0
+CPPFLAGS += -std=c++11 -DUNIT_TEST -Wall -g -O0
 GTEST_LIBS =  -L${GTEST_INSTALL_DIR}/lib -lgtest -lgtest_main -lpthread
 OBJECTS = $(SRC:%.c=%.o) $(SRC_CPP:%.cpp=%.o)
 
 .PHONY: all clean test testrun
 
-all : $(TESTS)
-	./$^
+all : testrun
 
 clean :
 	$(RM) $(TESTS) *.o
 
 test : $(TESTS)
+
+testrun : test
+	@for target in $(TESTS); do\
+        ./$$target; \
+    done
 
 %.o: %.c
 	$(CC) $(CFLAGS) -c $^ -o $@
